--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
-  "axios": "^1.7.9",
-  "cors": "^2.8.5",
-  "express": "^4.18.2",
-  "express-validator": "^7.2.0",
-  "puppeteer": "^23.10.1",
-  "puppeteer-extra": "^3.3.6",
-  "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-validator": "^7.2.0",
+    "puppeteer": "^23.10.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "ejs": "^3.1.8"  // Add this line
   },
   "engines": {
     "node": ">=14.0.0"
